@@ -41,6 +41,26 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">coupon_number_list</field>
         </record>
 
+        <record model="ir.action.act_window" id="act_promotion_coupon_number_form">
+            <field name="name">Coupon Numbers</field>
+            <field name="res_model">sale.promotion.coupon.number</field>
+        </record>
+        <record model="ir.action.act_window.view" id="act_promotion_coupon_number_form_view1">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="coupon_number_view_list"/>
+            <field name="act_window" ref="act_promotion_coupon_number_form"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_promotion_coupon_number_form_view2">
+            <field name="sequence" eval="20"/>
+            <field name="view" ref="coupon_number_view_form"/>
+            <field name="act_window" ref="act_promotion_coupon_number_form"/>
+        </record>
+        <menuitem
+            parent="sale.menu_configuration"
+            action="act_promotion_coupon_number_form"
+            sequence="30"
+            id="menu_promotion_coupon_number"/>
+
         <record model="ir.rule.group" id="rule_group_coupon_number_companies">
             <field name="name">User in companies</field>
             <field name="model">sale.promotion.coupon.number</field>
