@@ -1,3 +1,4 @@
+* Add menu entry for coupon numbers
 * Remove name on coupon
 
 Version 7.4.0 - 2024-11-04
